hphp/hack/test/typecheck/enum_class_label/attribute_argument_label.php.exp
File "attribute_argument_label.php", line 3, characters 17-29:
Attribute arguments must be literals (Parsing[1002])
File "attribute_argument_label.php", line 3, characters 3-15:
Unbound name: `SomeAttribute` (an object type) (Naming[2049])
File "attribute_argument_label.php", line 3, characters 3-15:
Unrecognized user attribute: `SomeAttribute` does not have a class. Please declare a class for the attribute. (Naming[2049])
File "attribute_argument_label.php", line 3, characters 17-25:
Unbound name: `SomeClass` (an object type) (Naming[2049])
